Add styling to active recipes

--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,6 +1,7 @@
 <a
-  class="card list-group-item bg-light d-flex flex-row"
+  class="card list-group-item d-flex flex-row"
   [routerLink]="[recipeId]"
+  routerLinkActive="active"
 >
   <div class="card-body d-flex flex-grow-1">
     <div>
