--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -25,7 +25,7 @@
             >Add Ingredients to Shopping List</a
           >
         </li>
-        <li><a class="dropdown-item">Edit Recipe</a></li>
+        <li><a (click)="onEditRecipe()" class="dropdown-item">Edit Recipe</a></li>
         <li><a class="dropdown-item">Delete Recipe</a></li>
       </ul>
     </div>
