--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -2,9 +2,9 @@
   <div class="col-xs-12 text-center">
     <img
       [src]="clickedRecipe.imgPath"
-      alt=""
+      [alt]="clickedRecipe.name"
       class="figure-img"
-      style="max-height: 30rem; max-width: 30rem"
+      style="max-height: 30rem; max-width: 30rem; width: 100%"
     />
   </div>
 </div>
@@ -13,24 +13,18 @@
     <h1 class="h1">{{ clickedRecipe.name }}</h1>
   </div>
 </div>
-<div class="row">
-  <div class="col-xs-12">
-    <div class="btn-group dropdown">
-      <button appDropdown class="btn btn-primary dropdown-toggle" type="button">
-        Manage recipe
-      </button>
-      <ul class="dropdown-menu">
-        <li>
-          <a (click)="updateIngredient()" class="dropdown-item"
-            >Add Ingredients to Shopping List</a
-          >
-        </li>
-        <li><a (click)="onEditRecipe()" class="dropdown-item">Edit Recipe</a></li>
-        <li><a class="dropdown-item">Delete Recipe</a></li>
-      </ul>
-    </div>
-  </div>
-</div>
+<button appDropdown class="btn btn-primary dropdown-toggle" type="button">
+  Manage recipe
+</button>
+<ul style="margin-top: 7px" class="dropdown-menu">
+  <li>
+    <a (click)="updateIngredient()" class="dropdown-item"
+      >Add Ingredients to Shopping List</a
+    >
+  </li>
+  <li><a (click)="onEditRecipe()" class="dropdown-item">Edit Recipe</a></li>
+  <li><a class="dropdown-item">Delete Recipe</a></li>
+</ul>
 
 <div class="row">
   <div class="col-xs-12">{{ clickedRecipe.desc }}</div>
