--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,35 +1,69 @@
 <div class="row">
   <div class="col-xs-12">
-    <form action="">
+    <form (ngSubmit)="onSubmit()" #shoppingForm="ngForm">
       <div class="row">
         <div class="col-sm-5">
           <label class="form-label" for="name">Name</label>
           <input
-            #ingredientName
             class="form-control"
+            name="name"
             id="name"
-            required
             type="text"
+            ngModel
+            required
           />
         </div>
         <div class="col-sm-2">
           <label class="form-label" for="amount">Amount</label>
           <input
-            #ingredientAmount
             class="form-control"
+            name="amount"
             id="amount"
-            required
             type="number"
+            [min]="1"
+            ngModel
+            required
+            #amount="ngModel"
           />
         </div>
       </div>
+
       <div class="row">
-        <div class="col-xs-12">
-          <button (click)="onAddIng()" class="btn btn-success" type="button">
-            Add
+        <div class="col-md-3 col-12">
+          <div
+            class="alert alert-danger mb-3"
+            *ngIf="amount.invalid && amount.dirty"
+          >
+            Min amount is 1!
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12 d-flex gap-1">
+          <button
+            [disabled]="!shoppingForm.valid"
+            class="btn btn-success"
+            type="submit"
+          >
+            {{ editMode ? "Edit" : "Add" }}
           </button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button
+            *ngIf="editMode"
+            (click)="onDelete()"
+            class="btn btn-danger"
+            type="button"
+          >
+            Delete
+          </button>
+          <button
+            [disabled]="!editMode"
+            (click)="onCancel()"
+            class="btn btn-primary"
+            type="button"
+          >
+            Cancel
+          </button>
         </div>
       </div>
     </form>
