--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,7 +3,7 @@
     <app-shopping-edit></app-shopping-edit>
     <hr />
     <ul class="list-group">
-      <a *ngFor="let ingredient of ingredients" class="list-group-item">
+      <a (click)="onEdit(i)" *ngFor="let ingredient of ingredients; let i = index" class="list-group-item">
         {{ ingredient.name }} ({{ ingredient.amount }})
       </a>
     </ul>
