--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,88 @@
-<p>recipe-edit works!</p>
+<div class="row">
+  <div class="col-sm-12">
+    <form (ngSubmit)="onSubmit()" [formGroup]="editForm">
+      <div class="row">
+        <div class="col-sm-12">
+          <button
+            [disabled]="editForm.invalid"
+            type="submit"
+            class="btn btn-success"
+          >
+            Save
+          </button>
+          <button type="submit" class="btn btn-danger">Cancel</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <div>
+            <label for="name" class="form-label">Name:</label>
+            <input
+              formControlName="name"
+              type="text"
+              id="name"
+              class="form-control"
+            />
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <label for="imgPath" class="form-label">Image URL:</label>
+          <input
+            formControlName="imgPath"
+            type="text"
+            id="imgPath"
+            class="form-control"
+          />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <img src="" alt="" class="" />
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <label for="description" class="form-label">Description:</label>
+          <textarea
+            formControlName="desc"
+            id="description"
+            rows="10"
+            class="form-control"
+          ></textarea>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12" formArrayName="ingredients">
+          Ingredients:
+          <div
+            class="row"
+            *ngFor="let ingredientCont of ingControls; let i = index"
+            [formGroupName]="i"
+          >
+            <div class="col-sm-8">
+              <input type="text" class="form-control" formControlName="name" />
+            </div>
+            <div class="col-sm-2">
+              <input
+                type="number"
+                class="form-control col-sm-auto"
+                formControlName="amount"
+              />
+            </div>
+            <button (click)="onDeleteIng(i)" class="btn btn-danger col-sm-2">X</button>
+          </div>
+        </div>
+      </div>
+
+      <button (click)="onAddIngredient()" class="btn btn-success" type="button">
+        Add Ingredient
+      </button>
+    </form>
+  </div>
+</div>
