--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,23 @@
   @extend .py-1;
 }
 
+
+input.ng-invalid.ng-dirty,
+textarea.ng-invalid.ng-dirty {
+  @extend .border-danger;
+}
+
+
+.form-control.ng-invalid.ng-dirty:focus {
+  box-shadow: 0 0 0 0.25rem rgba(var(--bs-danger-rgb), 0.25);
+  border-color: var(--bs-warning-rgb);
+}
+
+.alert {
+  padding: 5px;
+}
+
+
 .right-0 {
   right: 0
 }
