--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="row">
-        <div class="col-xs-12 d-flex gap-1">
+        <div class="col-xs-12 button-group-custom">
           <button
             [disabled]="!shoppingForm.valid"
             class="btn btn-success"
