--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -3,8 +3,7 @@
     <img
       [src]="clickedRecipe.imgPath"
       [alt]="clickedRecipe.name"
-      class="figure-img"
-      style="max-height: 30rem; max-width: 30rem; width: 100%"
+      class="custom-image"
     />
   </div>
 </div>
@@ -23,7 +22,7 @@
     >
   </li>
   <li><a (click)="onEditRecipe()" class="dropdown-item">Edit Recipe</a></li>
-  <li><a class="dropdown-item">Delete Recipe</a></li>
+  <li><a (click)="onDeleteRecipe()" class="dropdown-item">Delete Recipe</a></li>
 </ul>
 
 <div class="row">
