--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -32,7 +32,7 @@
         <div class="col-sm-12 text-center">
           <img
             [src]="imgPath.value"
-            alt="URL Is Not Correct"
+            alt="⚠️URL Is Not Correct!"
             class="alert alert-danger custom-image"
           />
         </div>
