fix some minor bugs

--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -32,8 +32,8 @@
         <div class="col-sm-12 text-center">
           <img
             [src]="imgPath.value"
-            alt="⚠️URL Is Not Correct!"
-            class="alert alert-danger custom-image"
+            alt="&#9888; URL Is Not Correct!"
+            class="custom-image"
           />
         </div>
       </div>
@@ -68,8 +68,8 @@
                 formControlName="amount"
               />
             </div>
-            <button (click)="onDeleteIng(i)" class="btn btn-danger col-sm-2">
-              X
+            <button (click)="onDeleteIng(i)" class="btn btn-danger text-dark col-sm-2">
+              &#10005;
             </button>
           </div>
         </div>
