Some minor improvements

--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -68,7 +68,7 @@
                 formControlName="amount"
               />
             </div>
-            <button (click)="onDeleteIng(i)" class="btn btn-danger text-dark col-sm-2">
+            <button (click)="onDeleteIng(i)" class="btn btn-danger text-dark col-sm-2 fw-bold">
               &#10005;
             </button>
           </div>
