Some syntax refactoring

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
       [class.collapse]="collapsed"
       class="navbar-collapse"
     >
-      <ul style="column-gap: 7px" class="navbar-nav me-auto nav-pills my-1">
+      <ul class="navbar-nav me-auto nav-pills my-1" style="column-gap: 7px">
         <li class="nav-item">
           <a
             [routerLink]="['recipes']"
