--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success" [routerLink]="['new']">New Recipe</button>
+    <button [routerLink]="['new']" class="btn btn-success">New Recipe</button>
   </div>
 </div>
 <hr />
@@ -8,8 +8,8 @@
   <div class="col-xs-12 list-group px-2">
     <app-recipe-item
       *ngFor="let recipe of recipes; let i = index"
-      [recipe]="recipe"
       [recipeId]="i"
+      [recipe]="recipe"
     ></app-recipe-item>
   </div>
 </div>
