--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,18 +1,18 @@
 <div class="row">
   <div class="col-xs-12">
-    <form (ngSubmit)="onSubmit()" #shoppingForm="ngForm">
+    <form #shoppingForm="ngForm" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-sm-5">
           <label class="form-label" for="name">Name</label>
           <input
-            class="form-control"
-            name="name"
-            id="name"
-            type="text"
-            ngModel
-            required
-            pattern=".*\S+.*"
             #name="ngModel"
+            class="form-control"
+            id="name"
+            name="name"
+            ngModel
+            pattern=".*\S+.*"
+            required
+            type="text"
           />
           <div
             *ngIf="name.invalid && name.dirty"
@@ -24,15 +24,15 @@
         <div class="col-sm-2">
           <label class="form-label" for="amount">Amount</label>
           <input
-            class="form-control"
-            name="amount"
-            id="amount"
-            type="number"
-            [min]="1"
-            ngModel
-            required
-            pattern=".*\S+.*"
             #amount="ngModel"
+            [min]="1"
+            class="form-control"
+            id="amount"
+            name="amount"
+            ngModel
+            pattern=".*\S+.*"
+            required
+            type="number"
           />
           <div
             *ngIf="amount.invalid && amount.dirty"
@@ -53,16 +53,16 @@
             {{ editMode ? "Edit" : "Add" }}
           </button>
           <button
-            *ngIf="editMode"
             (click)="onDelete()"
+            *ngIf="editMode"
             class="btn btn-danger"
             type="button"
           >
             Delete
           </button>
           <button
-            [disabled]="!editMode"
             (click)="onCancel()"
+            [disabled]="!editMode"
             class="btn btn-primary"
             type="button"
           >
