Add some responsive queries and refactoring

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,11 +6,7 @@
       class="navbar-toggler dropdown-toggle"
       type="button"
     ></button>
-    <div
-      (window:resize)="collapsed = true"
-      [class.collapse]="collapsed"
-      class="navbar-collapse"
-    >
+    <div [class.collapse]="collapsed" class="navbar-collapse">
       <ul class="navbar-nav me-auto nav-pills my-1" style="column-gap: 7px">
         <li class="nav-item">
           <a
