--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,5 @@
 <a
-  [routerLink]="[recipeId]"
+  [routerLink]="[recipeId + 1]"
   class="card list-group-item d-flex flex-row"
   routerLinkActive="active"
 >
