--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-xs-12">
+  <div>
     <button [routerLink]="['new']" class="btn btn-success">New Recipe</button>
   </div>
 </div>
 <hr />
 <div class="row">
-  <div class="col-xs-12 list-group px-2">
+  <div class="list-group px-2">
     <app-recipe-item
       *ngFor="let recipe of recipes; let i = index"
       [recipeId]="i"
