--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,18 +12,24 @@
           <a
             [routerLink]="['recipes']"
             class="nav-link ps-2"
-            id="recipeNav"
             routerLinkActive="active"
-            >Recipe</a
+          >Recipe</a
           >
         </li>
         <li class="nav-item">
           <a
             [routerLink]="['shopping-list']"
             class="nav-link ps-2"
-            id="shoppingNav"
             routerLinkActive="active"
-            >Shopping list</a
+          >Shopping list</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            [routerLink]="['auth']"
+            class="nav-link ps-2"
+            routerLinkActive="active"
+          >Signup/Login</a
           >
         </li>
       </ul>
