Add login and signup feature

--- a/src/app/loading/loading.component.html
+++ b/src/app/loading/loading.component.html
@@ -2,8 +2,8 @@
   <div class="loading"></div>
 </div>
 
-<div *ngIf="hasError" class="loadingParent">
-  <p class="alert alert-danger position-fixed w-100">
+<div *ngIf="hasError">
+  <p class="alert alert-danger">
     <span> &#9888; </span>
     {{ hasError }}
   </p>
