--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -4,6 +4,7 @@
       <div class="mb-3">
         <label class="form-label" for="exampleInputEmail1">Email address</label>
         <input
+          name="email"
           autocomplete="email"
           class="form-control"
           formControlName="email"
@@ -14,7 +15,16 @@
       <div class="mb-3">
         <label class="form-label" for="exampleInputPassword1">Password</label>
         <input
-          autocomplete="password"
+          [autocomplete]="
+            authMode.getValue() === 'signup'
+              ? 'new-password'
+              : 'current-password'
+          "
+          [name]="
+            authMode.getValue() === 'signup'
+              ? 'new-password'
+              : 'current-password'
+          "
           class="form-control"
           formControlName="password"
           id="exampleInputPassword1"
