--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,7 +36,7 @@
 
       <ul class="navbar-nav">
         <li *ngIf="loggedIn">
-          <a style="padding-top: 6px" class="nav-link ps-2">Logout</a>
+          <a (click)="onLogout()" style="padding-top: 6px" class="nav-link ps-2">Logout</a>
         </li>
 
         <li [routerLink]="[loggedIn ? null : '/auth']" class="dropdown">
