--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -5,8 +5,8 @@
 >
   <div class="card-body d-flex flex-grow-1">
     <div>
-      <h4 class="card-title">{{ recipe.name }}</h4>
-      <p class="card-text">{{ recipe.desc }}</p>
+      <h4 class="card-title">{{ recipe.name | shortenSrt:20 }}</h4>
+      <p class="card-text">{{ recipe.desc | shortenSrt:38 }}</p>
     </div>
   </div>
 
