--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <app-loading></app-loading>
+<app-alert></app-alert>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
