--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,10 +18,6 @@ textarea.ng-invalid.ng-dirty {
   border-color: var(--bs-warning-rgb);
 }
 
-.alert {
-  padding: 5px 8px;
-}
-
 .right-0 {
   right: 0
 }
@@ -41,4 +37,11 @@ a {
   max-height: 30rem;
   max-width: 30rem;
   width: 100%
+}
+
+.alert-modal {
+  left: 50%;
+  right: 50%;
+  transform: translateX(-50%);
+  top: 10px;
 }
