--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,7 +36,7 @@
 
       <ul class="navbar-nav">
         <li *ngIf="loggedIn">
-          <a (click)="onLogout()" style="padding-top: 6px" class="nav-link ps-2"
+          <a (click)="onLogout()" class="nav-link ps-2" style="padding-top: 6px"
           >Logout</a
           >
         </li>
