--- a/src/app/shared/alert/alert.component.html
+++ b/src/app/shared/alert/alert.component.html
@@ -4,5 +4,5 @@
   style="width: fit-content"
 >
   <div class="me-2">{{ hasError }}</div>
-  <button type="button" class="btn-close" (click)="onClose()"></button>
+  <button (click)="onClose()" class="btn-close" type="button"></button>
 </div>
