--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,8 @@
 <div class="row">
   <div>
-    <button (click)="onNewRecipeClick()" class="btn btn-success">New Recipe</button>
+    <button (click)="onNewRecipeClick()" class="btn btn-success">
+      New Recipe
+    </button>
   </div>
 </div>
 <hr />
