--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,7 +5,7 @@
     <ul class="list-group">
       <a
         (click)="onEdit(i)"
-        *ngFor="let ingredient of ingredients; let i = index"
+        *ngFor="let ingredient of ingredients | async; let i = index"
         class="list-group-item"
       >
         {{ ingredient.name }} ({{ ingredient.amount }})
