--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div *ngIf="recipeSelected" class="row">
   <div class="col-sm-12">
     <form (ngSubmit)="onSubmit()" [formGroup]="editForm">
       <div class="row">
