Fix a bug related to recipe-edit.component.ts page

--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,4 +1,7 @@
-<div *ngIf="recipeSelected" class="row">
+<div
+  *ngIf="recipeSelected !== undefined"
+  class="row"
+>
   <div class="col-sm-12">
     <form (ngSubmit)="onSubmit()" [formGroup]="editForm">
       <div class="row">
